<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/black"
        android:gravity="bottom"
        android:text="@string/registro"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="20dp"
        android:background="@color/black"
        android:text="@string/Info_Registro"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#757575" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:height="60dp"
        android:gravity="bottom"
        android:text="@string/Tit_Mail" />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/HintEmail"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:height="40dp"
        android:gravity="bottom"
        android:text="@string/password" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/PasswordCreate"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="35dp"
        android:height="50dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/createAccount" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:text="@string/TextCheck" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:height="50dp"
            android:gravity="bottom"
            android:text="@string/TextRegister"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:text="@string/Log_in_Link"
            android:textColor="@color/teal_200"
            android:textSize="11sp" />

    </LinearLayout>


</LinearLayout>
