<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <TextView
        android:id="@+id/Title_Login"
        android:layout_width="163dp"
        android:layout_height="44dp"
        android:text="@string/title_login"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.149" />

    <EditText
        android:id="@+id/Usuario"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/HintEmail"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/Login_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title_Login"
        app:layout_constraintVertical_bias="0.331"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginBottom="66dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/HintPassword"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/Login_Button"
        app:layout_constraintEnd_toEndOf="@+id/Usuario"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/Usuario"
        app:layout_constraintTop_toBottomOf="@+id/Usuario"
        app:layout_constraintVertical_bias="0.844" />

    <Button
        android:id="@+id/Login_Button"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_200"
        android:text="@string/title_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.605" />

    <TextView
        android:id="@+id/Text_Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textregister"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/Register_Link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.274"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Register_Link"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Register_Link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:text="@string/Register"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toEndOf="@+id/Text_Register"
        app:layout_constraintTop_toBottomOf="@+id/Login_Button"
        app:layout_constraintVertical_bias="0.009" />

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        tools:layout_editor_absoluteX="126dp"
        tools:layout_editor_absoluteY="581dp" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:background="@color/teal_200"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Register_Link" />


</androidx.constraintlayout.widget.ConstraintLayout>
